# ofxstatement-bbva-it

./: .gitignore  Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/ofxstatement/plugins/: bbva.py  bbva_pdf.py
src/ofxstatement_bbva/: __init__.py  bbva.py
tests/: test_bbva.py
