[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ofxstatement-bbva"
version = "0.5.0"
description = "BBVA plugin for ofxstatement with multi-language support (Italian/Spanish)"
authors = [
  { name="Marco Trevisan", email="mail@3v1n0.net" },
  { name="Alfystar", email="alfanoing@gmail.com"},
]
readme = { file = "README.md", content-type = "text/markdown" }
license = {text = "GPLv3"}
keywords = [
    "ofx",
    "ofxstatement",
    "bbva",
    "banco",
    "banking",
    "statement",
    "multi-language",
    "Banco",
    "Bilbao",
    "Vizcaya",
    "Argentaria"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Natural Language :: Italian",
    "Natural Language :: Spanish",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Utilities",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
requires-python = ">=3.9"
dependencies = [
    "ofxstatement>=0.6.0",
    "openpyxl>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0"
]

[project.urls]
Homepage = "https://github.com/3v1n0/ofxstatement-bbva"
Repository = "https://github.com/3v1n0/ofxstatement-bbva.git"
Issues = "https://github.com/3v1n0/ofxstatement-bbva/issues"

[project.entry-points."ofxstatement"]
bbva = "ofxstatement_bbva.bbva:BBVAPlugin"
bbva-pdf = "ofxstatement_bbva.bbva_pdf:BBVAPdfPlugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

